--- a/src/components/AboutList/OurStory/OurStory.css
+++ b/src/components/AboutList/OurStory/OurStory.css
@@ -220,11 +220,11 @@ html {
     margin-right: auto;
     width: 100%;
     max-width: 100%;
-    height: 180px; /* hoặc 220px tuỳ ý */
+    height: 180px; 
     object-fit: cover;
   }
   .inline-images {
-    flex-direction: column; /* Thêm dòng này để ảnh xếp dọc */
+    flex-direction: column; 
     gap: 10px;
     padding: 0 2px;
     margin: 16px auto;
@@ -280,7 +280,7 @@ html {
     margin-right: auto;
     max-width: 100%;
     height: auto;
-    height: 220px;         /* Chiều cao cố định */
+    height: 220px;         
   object-fit: cover;
   }
 }
